...
      },
    );
  }

  Widget _textBoxConfirmPassword() {
    return TextFormField(
      key: Key('confPassField'),
      decoration: InputDecoration(
          labelText: 'Email',
          floatingLabelBehavior: FloatingLabelBehavior.always),
      controller: _confimPasswordController,
      onSaved: (value) {
        confirmPassword = value;
...
